issue 5 - formatei a tabela usando margin:auto e text-align:center

--- a/semana1/bugfixes/exercicio-aula6/index.css
+++ b/semana1/bugfixes/exercicio-aula6/index.css
@@ -7,6 +7,7 @@
 * {
     margin: 0;
     padding: 0;
+    text-decoration: none;
 }
 
 h2 {
@@ -71,9 +72,10 @@ div img {
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
-    list-style-position: outside;
-    /* padding: 20px; */
+    list-style-position: inside;
+
 }
+
 
 .frase-inicial{
     padding: 20px;
@@ -81,6 +83,12 @@ div img {
 
 #container-de-descricao>ol {
     padding: 15px 0px;
+    text-align: center;    
+}
+
+#container-de-descricao>li {    
+    text-align: center;
+    padding-left: 500px;    
 }
 
 #container-para-comprar {
@@ -107,6 +115,8 @@ div:last-child {
 
 table {
     width: 60%;
+    margin: auto;
+    text-align: center;
 }
 
 td button {
